// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is disabled when offline 1`] = `
<div>
  <span
    class="buttonContainer"
  >
    <button
      class="DropdownButton"
      component="[object Object]"
      disabled=""
      icon="[object Object]"
      type="button"
    >
      Add filter
    </button>
  </span>
</div>
`;

exports[`is enabled when online 1`] = `
<div>
  <span
    class="buttonContainer"
  >
    <button
      class="DropdownButton"
      component="[object Object]"
      icon="[object Object]"
      type="button"
    >
      Add filter
    </button>
  </span>
</div>
`;
